# DiscordScrapeBot

./: .dockerignore  .gitignore  .sample-config.yaml  .sample-env  Dockerfile  bot.py  db.sqlite-journal  docker-compose.yaml  main.py  previous_boot.json  pyproject.toml  utils.py
.github/workflows/: deploy.yaml
api/: .sample-env  Dockerfile  pyproject.toml
api/app/: settings.py  urls.py
api/logger/: admin.py  models.py  serializers.py  tables.py  urls.py  views.py
api/logger/migrations/: 0001_initial.py  0002_alter_embedfooter_icon_url_and_more.py  0002_embed_description_alter_embed_color_alter_embed_type.py  0003_alter_embedfield_name.py  0003_message_deleted_at_message_is_deleted.py  0004_remove_sticker_message_message_stickers.py  0005_remove_embedfooter_proxy_icon_url_and_more.py  0006_embedfooter_proxy_icon_url_embedthumbnail_proxy_url_and_more.py  0007_alter_embed_title_alter_embedfield_name.py  0008_message_is_edited_message_original_content_and_more.py  0009_embedhistory_message_history_message_original_embeds.py  0010_remove_messagehistory_message_and_more.py  0011_messagehistory.py  0012_messagecontenthistory_delete_messagehistory.py  0013_messageembedhistory.py
api/logger/templates/: messages_list.html
bot/: .sample-env  Dockerfile  main.py  previous_boot.json  pyproject.toml
commands/: __init__.py  admin_commands.py  backfill_commands.py  consent_commands.py
dbutils/: create_table.py  drop_table.py  export_query.py  remove_duplicate_records.py  select_records.py  top_10_records.py  top_20_records.py
services/: __init__.py  backfill_service.py  config_service.py  consent_service.py  database_service.py  message_service.py
utils/: __init__.py  decorators.py
