[project]
name = "discordscrapebot"
version = "0.1.0"
description = ""
authors = [
    {name = "Ethan Christensen",email = "ethanlchristensen@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py (>=2.6.4,<3.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
